# tp4-sds-2026Q1G01S2

./: .gitattributes  .gitignore  CLAUDE.md  README.md
SdS_TP3_2026Q1G01CS2_Codigo/: README.md  pyproject.toml
SdS_TP3_2026Q1G01CS2_Codigo/configs/: system1.animation-smoke.toml  system1.example.toml  system1.reference-final.toml
SdS_TP3_2026Q1G01CS2_Codigo/src/tp3_sds/: __init__.py  __main__.py  cli.py
SdS_TP3_2026Q1G01CS2_Codigo/src/tp3_sds/system1/: __init__.py  config.py  events.py  model.py  observables.py  output.py  simulation.py
SdS_TP3_2026Q1G01CS2_Codigo/tests/: test_system1_motor.py
SdS_TP4_2026Q1G01CS2_Codigo/: pom.xml
SdS_TP4_2026Q1G01CS2_Codigo/configs/: system2.example.toml
analysis-python/: README.md
analysis-python/system1/: README.md  analyze_system1.py  test_analyze_system1.py
analysis-python/system2/: README.md  analyze_system2.py  animate_system2.py  test_analyze_system2.py  test_animate_system2.py
analysis-python/tp3/: README.md  analyze_tp3.py  animate_tp3.py  test_analyze_tp3.py  test_animate_tp3.py
docs/: 2026-05-11_tp3-enunciado-audit_v1.md  2026-05-11_tp3-reference-output-contract_v1.md  arquitectura_tp4_sistema2.md
docs/bibliografia/BiblioTP2/: 00_Book_LatticeBoltamannModeling.rtf
docs/superpowers/plans/: 2026-05-11_tp3-reference-outputs_v1.md  system1-phased-implementation-plan.md
engine-java/: pom.xml
scripts/: cloud_run_outputs_and_push.sh  local_resume_outputs.sh  local_run_outputs.sh  run_system2_sweep.py  run_tp3_reference_sweep.py  test_run_system2_sweep.py  test_run_tp3_reference_sweep.py
(+60 files in other folders)
