[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tp3-sds-system1"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
tp3 = "tp3_sds.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
